--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "puzzle_game"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.12.1"
-bevy_asset_loader = { version = "0.19.0", features = ["2d"] }
-bevy_pixel_camera = "0.12.0"
-bevy_rapier2d = "0.23.0"
+bevy = { version = "0.12.1", default-features = true }
+bevy_asset_loader = { version = "0.19.0", features = ["2d", "3d", "standard_dynamic_assets"] }
+bevy_pixel_camera = { version = "0.12.0" }
+leafwing-input-manager = { version = "0.11.2" }
+bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
 
 # Enable low optimizations in debug mode 
 [profile.dev]
