--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bevy_asset_loader = { version = "0.19.0", features = ["2d", "3d", "standard_dyna
 bevy_pixel_camera = { version = "0.12.0" }
 leafwing-input-manager = { version = "0.11.2" }
 bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
+winit = "0.28"
 
 # Enable low optimizations in debug mode 
 [profile.dev]
